--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,22 @@
+V6.5: (under development)
+  * Enhancement #662: Background image now supports transparency
+  * Fixed #289: HintMode hmHintAndDefault: Default Hint does not change to node specific hint when the mouse is moved to a node.
+  * Fixed #674: HintMode hmHintAndDefault: If the BidiMode is right to left, the Default Hint fails to appear
+  * Fixed #139: hoDblClickResize doesn't work correctly with InitalState ivsMultiline
+  * Fixed #668: Removed unnecessary #include <ShlObj.hpp>
+  * Fixed #670: Make it possible to override RangeX   
+  * Fixed #676: VCL themed scrollbar does not update correctly after adding children
+  * License chnage dfrom LGPL to LGPL with static linking excpetion. See issue #673 for details.     
+  * Fixed #626: Wrong hot node selection during mouse movement over different nodes
+
+V6.4.1: (26 Oct 2016)
+  * Fixed #549: Drawing issue with toCheckSupport an toExtendedFocus
+  * Fixed #663: Exception pressing return on an edited item with no columns)
+  * Fixed #661: Minimal Demo 2 different problems, can't select on start up, multiple clicks causes error
+  * Fixed problem with wrongly drawn checkbox in column headers.
+  * VirtualTreePerItemAction now initializes all nodes before it works with them and changes e.g. the check state.
+  * TBaseVirtualTree.DoGetImageIndex() now always tries to assign a default image list as result, even if OnGetImage and OnGetImageEx are not assigned. So derived controls do not need to make this step.
+
 V6.4: (28 Sep 2016)
   * Fixed #622: [BREAKING CHANGE] Removed all 16x16 fixed sized checkbox-imagelists. 
     The property CheckImageKind supports the values ckSystemDefault and ckCustom only and should be considered deprecated.
